add javascript to show card on button click

--- a/index.html
+++ b/index.html
@@ -12,41 +12,41 @@
       <h1 class="jumbotron">Animal Wiki</h1>
       <div class="row">
         <div class="col-md-4">
-          <h2>Slug</h2>
+          <button type="button" id="slugbtn" class="btn btn-primary">Slug</button>
         </div>
         <div class="col-md-4">
-          <h2>Sloth</h2>
+          <button type="button" id="slothbtn" class="btn btn-primary">Sloth</button>
         </div>
         <div class="col-md-4">
-          <h2>Sea Lion</h2>
+          <button type="button" id="sealionbtn" class="btn btn-primary">Sea Lion</button>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4">
-          <div class="card" style="width: 20rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card" style="width: 20rem;" id="slug">
+            <img class="card-img-top" src="img/slug.jpeg" alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title">Card title</h4>
+              <h4 class="card-title">Banana Slug</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 20rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card" style="width: 20rem;" id="sloth">
+            <img class="card-img-top" src="img/sloth.jpeg" alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title">Card title</h4>
+              <h4 class="card-title">Sloth!</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 20rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card" style="width: 20rem;" id="sealion">
+            <img class="card-img-top" src="img/sealion.jpeg" alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title">Card title</h4>
+              <h4 class="card-title">Sea Lion</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
